# axo

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  DOCUMENTATION.md  Dockerfile  README.md  build.rs  justfile  prompt.txt  roadmap.md  test1.axo
.cargo/: config.toml
base/: cast.axo  cast.c  file.axo  file.c  input.axo  input.c  libc.axo  memory.axo  memory.c  option.axo  print.axo  print.c  process.axo  process.c  string.axo  string.c  vector.axo
docs/: combinator-framework-refactor.md
example/: test2.axo  text.axo
examples/: README.md  access.axo  bad_order.axo  calculator.axo  delimited.axo  errors.axo  escape.axo  interpreter_calculator.axo  interpreter_test.axo  long.axo  math.axo  number.axo  operations.axo  single_line.axo  symbol.axo  temp.axo  test.axo  test2.axo  test_examples.sh  text.axo  type_alias.axo
examples/libc/: conversions.axo  enums.axo  formatter.c  libc.axo  runtime.c  test.axo
fuzz/: Cargo.toml
fuzz/corpus/parser/: basic.txt  compound.txt
fuzz/corpus/scanner/: basic.txt  escapes.txt
fuzz/fuzz_targets/: parser.rs  scanner.rs
inkwell/examples/kaleidoscope/: main.rs  (+1 more)
inkwell/src/: targets.rs
llvm/: AGENT_PROMPT.md
llvm/scripts/: build-current-target.sh
matchete/: Cargo.toml  Cargo.toml.orig
matchete/src/: assessor.rs
matchete/src/prelude/string/: exact.rs  fuzzy.rs  lexical.rs  phonetic.rs  proximity.rs  structural.rs
project/: test.axo
runtime/: cast.axo  cast.c  file.axo  memory.axo  print.axo  print.c  process.axo  string.axo  string.c  vector.c
src/: artifact.rs  cli.rs  compiler.rs  dialog.rs  errors.rs  float.rs  fuck  lexer.rs  lib.rs  logger.rs  macros.rs  main.rs  parser.rs  timer.rs  tokens.rs
src/analyzer/: analysis.rs  analyzer.rs  element.rs  error.rs  mod.rs  traits.rs
src/axo_ast/: composite.rs  declaration.rs  error.rs  expression.rs  mod.rs  parser.rs  primary.rs  statement.rs
src/axo_checker/: types.rs
src/axo_codegen/: mod.rs
src/axo_cursor/: format.rs  mod.rs  peekable.rs  position.rs  span.rs
src/axo_data/: float.rs  fmt.rs  format.rs  matcher.rs  mod.rs  peekable.rs  string.rs  tree.rs
src/axo_data/hashbrown/: Cargo.toml
src/axo_data/hashbrown/src/: lib.rs  map.rs
src/axo_data/hashbrown/src/external_trait_impls/rayon/: map.rs  set.rs  table.rs
src/axo_error/: error.rs  hint.rs  mod.rs
src/axo_errors/: error.rs  hint.rs
src/axo_fmt/: mod.rs
src/axo_form/: action.rs  classifier.rs  delimited.rs  fmt.rs  form.rs  format.rs  former.rs  lexer.rs  mod.rs  order.rs  parser.rs  pattern.rs  test.rs  traits.rs
src/axo_format/: mod.rs  vector.rs
src/axo_hash/: Cargo.toml
src/axo_initial/: error.rs  initializer.rs  mod.rs  prescriber.rs
src/axo_internal/: compiler.rs  logger.rs  mod.rs
src/axo_lexer/: error.rs  fmt.rs  format.rs  handler.rs  keyword.rs  lexer.rs  literal.rs  mod.rs  number.rs  operator.rs  punctuation.rs  span.rs  symbol.rs  token.rs
src/axo_matcher/: common.rs  composite.rs  custom.rs  matcher.rs  mod.rs  numeric.rs  presets.rs  string.rs  types.rs  utils.rs
src/axo_parser/: composite.rs  core.rs  declaration.rs  delimited.rs  delimiter.rs  element.rs  error.rs  expression.rs  fmt.rs  format.rs  item.rs  mod.rs  parser.rs  primary.rs  state.rs  statement.rs  symbol.rs  symbolic.rs  traits.rs
src/axo_resolver/: assessor.rs  brand.rs  error.rs  hint.rs  matcher.rs  mod.rs  resolver.rs  scope.rs  statement.rs  validation.rs
src/axo_rune/: mod.rs
src/axo_scanner/: character.rs  core.rs  error.rs  escape.rs  format.rs  mod.rs  number.rs  operator.rs  punctuation.rs  scanner.rs  token.rs
src/axo_schema/: element.rs  mod.rs  symbol.rs
src/axo_semantic/: mod.rs  syntactic.rs
src/axo_span/: fmt.rs  format.rs  mod.rs  position.rs  span.rs
src/axo_symbol/: mod.rs
src/axo_unicode/category/: Cargo.toml
src/axo_unicode/common/: Cargo.toml
src/axo_unicode/common/src/: lib.rs
src/axo_unicode/property/: Cargo.toml
src/axo_unicode/property/src/: lib.rs  tables.rs
src/axo_unicode/range/: Cargo.toml
src/axo_unicode/range/src/: iter.rs  lib.rs  range.rs
src/axo_unicode/unic_common/: Cargo.toml
src/axo_validator/: error.rs  mod.rs  validator.rs
src/checker/: checker.rs  element.rs  error.rs  mod.rs  primitive.rs  semantics.rs  symbol.rs  traits.rs  types.rs
src/combinator/: action.rs  classifier.rs  form.rs  former.rs  mod.rs  traits.rs
src/data/: float.rs  mod.rs  string.rs
src/emitter/: error.rs  mod.rs
src/error/: error.rs
src/format/: analyzer.rs  combinator.rs  data.rs  formation.rs  mod.rs  parser.rs  reporter.rs  resolver.rs  scanner.rs  show.rs  stencil.rs
src/formation/: classifier.rs  form.rs  format.rs  former.rs  mod.rs  order.rs  traits.rs
src/generator/: backend.rs  error.rs  generator.rs  mod.rs
src/initial/: error.rs  initializer.rs  mod.rs  preference.rs
src/initializer/: configuration.rs  directive.rs  error.rs  initializer.rs  mod.rs  preference.rs  traits.rs
src/internal/: base.axo  base.rs  cache.rs  compiler.rs  driver.rs  logger.rs  mod.rs  time.rs  timer.rs
src/interpreter/: error.rs  interpreter.rs  mod.rs  translator.rs
src/lexer/: error.rs  keyword.rs  lexer.rs  mod.rs  operator.rs  punctuation.rs  span.rs  token.rs
src/parser/: README.md  composite.rs  core.rs  declaration.rs  delimited.rs  element.rs  error.rs  expression.rs  format.rs  mod.rs  parser.rs  primary.rs  statement.rs  symbol.rs  symbolic.rs  traits.rs
src/procedural/: Cargo.toml
src/reporter/: error.rs  hint.rs  mod.rs  reporter.rs
src/resolver/: assessor.rs  base.rs  element.rs  error.rs  hint.rs  matcher.rs  mod.rs  primitives.rs  resolver.rs  scope.rs  symbol.rs  traits.rs  types.rs  typing.rs  validator.rs
src/runtime/: io.rs  memory.rs  mod.rs  text.rs
src/scanner/: character.rs  core.rs  error.rs  escape.rs  format.rs  mod.rs  number.rs  operator.rs  punctuation.rs  scanner.rs  token.rs  traits.rs
src/schema/: element.rs  mod.rs  symbol.rs
src/text/: mod.rs
src/tracker/: error.rs  format.rs  mod.rs  peekable.rs  position.rs  span.rs
src/validator/: error.rs  mod.rs  validator.rs
test_project/: text.axo
(+356 files in other folders)
