[package]
name = "axo"
version = "0.0.2-alpha"
edition = "2021"

[features]
default = [
    "combinator",
    "initial", "scanner",
    "parser", "resolver", "analyzer"
]
combinator = []
initial = ["combinator", "scanner", "parser"]
scanner = ["combinator"]
parser = ["combinator", "scanner"]
resolver = ["combinator", "scanner", "parser"]
analyzer = ["combinator", "parser", "resolver"]
interpreter = ["combinator", "analyzer", "resolver", "libloading", "libffi"]
generator = ["combinator", "analyzer", "resolver", "inkwell"]

[dependencies]
broccli = { version = "0.0.22" }
orbyte = { path = "../orbyte" }
inkwell = { version = "0.8.0", features = ["llvm19-1-prefer-dynamic"], optional = true }
libloading = { version = "0.9.0", optional = true }
libffi = { version = "5.1.0", optional = true }

[workspace]
members = [
    ".",
]

[profile.release]
strip = true
opt-level = "z"
lto = true

[patch.crates-io]
windows-link = { path = "vendor/dummy/windows-link" }

[target.'cfg(windows)'.dependencies]
libffi-sys = { version = "4.1.0", optional = true }