[package]
name = "axo"
version = "0.0.2-alpha"
edition = "2021"

[features]
default = [
    "combinator",
    "initial", "scanner",
    "parser", "resolver", "analyzer"
]
combinator = []
initial = ["combinator", "scanner", "parser"]
scanner = ["combinator"]
parser = ["combinator", "scanner"]
resolver = ["combinator", "scanner", "parser"]
analyzer = ["combinator", "parser", "resolver"]
generator = ["combinator", "analyzer", "resolver", "inkwell"]
dialog = ["generator"]

[dependencies]
broccli = { version = "0.0.22" }
inkwell = { version = "0.9.0", features = ["llvm19-1-prefer-dynamic"], optional = true }
crossterm = "0.29.0"
cranelift = "0.131.0"
cranelift-codegen = "0.131.0"
cranelift-frontend = "0.131.0"
cranelift-module = "0.131.0"
cranelift-object = "0.131.0"

[workspace]
members = [
    ".",
]

[profile.release]
strip = true
opt-level = "z"
lto = true

[target.'cfg(windows)'.dependencies]
libffi-sys = { version = "4.1.0", optional = true }
