[package]
name = "axo"
version = "0.0.2-alpha"
edition = "2021"

[features]
default = [
    "initial", "scanner",
    "parser", "resolver", "analyzer"
]
combinator = []
initial = ["combinator", "scanner", "parser"]
scanner = ["combinator"]
parser = ["combinator", "scanner"]
resolver = ["combinator", "scanner", "parser"]
analyzer = ["combinator", "parser", "resolver"]
llvm = ["combinator", "analyzer", "resolver", "inkwell"]
interpreter = ["combinator", "analyzer", "resolver"]
dialog = ["interpreter", "crossterm"]

[dev-dependencies]
proptest = "1.11.0"

[dependencies]
broccli = { version = "0.0.22" }
inkwell = { version = "0.9.0", features = ["llvm19-1"], optional = true }
crossterm = { version = "0.29.0", optional = true }
chaint = { path = "../chaint" }

[workspace]
members = [
    ".",
]

[profile.release]
strip = true
opt-level = "z"
lto = true