[package]
edition = "2021"
name = "matchete"
version = "0.0.36"
authors = ["Ali Aghaahmadi <itsaliaghaahmadi@gmail.com>"]
build = false
autolib = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = "A fast and flexible matcher for comparing and diffing data structures."
readme = "README.md"
keywords = [
    "matcher",
    "cmp",
    "data",
    "pattern",
    "rust",
]
categories = [
    "development-tools",
    "parsing",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/liagha/matchete"

[lib]
name = "matchete"
path = "src/lib.rs"

[[bin]]
name = "matchete"
path = "src/main.rs"

[dependencies.hashish]
version = "0.0.1"
