[package]
name = "unic-ucd-common"
version = "0.9.0"
edition = "2018"
authors = ["The UNIC Project Developers"]
repository = "https://github.com/open-i18n/rust-unic/"
license = "MIT/Apache-2.0"
description = "UNIC — Unicode Character Database — Common Properties"
keywords = ["text", "unicode", "character-property", "alphabetic", "numeric"]
categories = ["internationalization", "text-processing", "parsing", "rendering"]

[dependencies]
unic-char-property = { path = "../property", version = "0.9.0" }
unic-char-range = { path = "../range", version = "0.9.0" }
