[package]
name = "unic-char-property"
version = "0.9.0"
edition = "2018"
authors = ["The UNIC Project Developers"]
repository = "https://github.com/open-i18n/rust-unic/"
license = "MIT/Apache-2.0"
description = "UNIC — Unicode Character Tools — Character Property taxonomy, contracts and build macros"
keywords = ["text", "unicode", "character-property"]
categories = ["internationalization", "text-processing", "parsing"]

[dependencies]
unic-char-range = { path = "../range", version = "0.9.0" }