[package]
name = "unic-char-range"
version = "0.9.0"
edition = "2018"
authors = ["The UNIC Project Developers"]
repository = "https://github.com/open-i18n/rust-unic/"
license = "MIT/Apache-2.0"
description = "UNIC — Unicode Character Tools — Character Range and Iteration"
keywords = ["text", "unicode", "utilities", "iteration"]
categories = ["internationalization", "text-processing"]