[package]
name = "unic-common"
version = "0.9.0"
edition = "2018"
authors = ["The UNIC Project Developers"]
repository = "https://github.com/open-i18n/rust-unic/"
license = "MIT/Apache-2.0"
description = "UNIC — Common Utilities"
keywords = ["unicode", "version"]
categories = ["internationalization", "text-processing"]